[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kmarkup"
version = "0.1.0"
description = "A flexible, minimalist markup language."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Ken Schutte"}]

[project.scripts]
kmarkup = "kmarkup.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
